complete banner section with responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgba(247, 247, 248, 1);
+}
+.heading {
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: left;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.borderBottom {
+  border-bottom: 2px solid rgba(115, 143, 255, 1);
+  padding-bottom: 5px;
+  width: 80.52px;
 }
